--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/markotasic/Sneakers#readme",
   "dependencies": {
+    "@google-cloud/storage": "^6.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "colors": "^1.4.0",
